--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ skills:
 
       {% for skill in page.skills %}
 
-      <div class="col-4 center">
+      <div class="col-4_md-6_sm-12 center">
         <i class="fa fa-{{skill.icon}}" aria-hidden="true"></i>
         <h3>{{skill.title}}</h3>
         <p>{{skill.description}}</p>
